--- a/package.json
+++ b/package.json
@@ -3,6 +3,6 @@
     "sass": "^1.70.0"
   },
   "scripts": {
-    "sass": "sass scss/index.scss css/index.css"
+    "sass": "sass scss/index.scss css/index.css --watch"
   }
 }
